Update: Delete api from card
